--- a/src/main/resources/dk/dtu/view/App_view.fxml
+++ b/src/main/resources/dk/dtu/view/App_view.fxml
@@ -1,60 +1,106 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.shape.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.shape.Circle?>
+<?import javafx.scene.shape.Rectangle?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<Pane prefHeight="521.0" prefWidth="746.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="dk.dtu.controller.AppController">
-<children>
-    <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="200.0" stroke="BLACK" strokeType="INSIDE" width="302.0" />
-    <ImageView fx:id="background" fitHeight="521.0" fitWidth="746.0">
-        <image>
-            <Image url="@Images/moonlit_main_day.jpg" />
-        </image>
-    </ImageView>
-    <VBox layoutY="310.0" prefHeight="211.0" prefWidth="255.0">
-        <children>
-            <TextField fx:id="messageField" promptText="Enter message here" />
-            <Button onAction="#handleSendAction" prefHeight="25.0" prefWidth="296.0" text="Send" />
-            <TextArea fx:id="messageArea" editable="false" />
-        </children>
-    </VBox>
-    <VBox layoutX="588.0" layoutY="95.0" prefHeight="211.0" prefWidth="144.0">
-        <children>
-            <Label style="-fx-background-color: #FFFFFF;" text="Usernames:" />
-            <TextArea fx:id="usernameList" editable="false" prefHeight="213.0" prefWidth="144.0" />
-        </children>
-    </VBox>
-    <VBox layoutX="14.0" layoutY="142.0" prefHeight="153.0" prefWidth="144.0">
-        <children>
-            <TextField editable="false" text="Your Role:" />
-            <TextArea fx:id="roleBox" prefHeight="200.0" prefWidth="200.0" wrapText="true" />
-        </children>
-    </VBox>
-    <VBox layoutX="547.0" layoutY="403.0" prefHeight="118.0" prefWidth="199.0">
-        <children>
-            <TextField />
-            <TextArea prefHeight="200.0" prefWidth="200.0" />
-        </children>
-    </VBox>
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#06223b" height="45.0" layoutX="603.0" stroke="BLACK" strokeType="INSIDE" width="144.0" />
-      <Text fill="#7f0000" layoutX="630.0" layoutY="29.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Settings" textAlignment="CENTER" wrappingWidth="90.552001953125">
-         <font>
-            <Font name="Gill Sans Ultra Bold Condensed" size="20.0" />
-         </font>
-      </Text>
-      <ImageView fx:id="counter" fitHeight="225.0" fitWidth="290.0" layoutX="-60.0" layoutY="-48.0">
-         <image>
-            <Image url="@Images/sun.png" />
-         </image>
-      </ImageView>
-    <Label fx:id="timerLabel" layoutX="60.0" layoutY="52.0" text="02:00">
-         <font>
-            <Font name="Gill Sans Ultra Bold Condensed" size="20.0" />
-         </font></Label>
-      <AnchorPane layoutX="229.0" layoutY="108.0" prefHeight="45.0" prefWidth="52.0" />
-      <Circle fill="DODGERBLUE" layoutX="424.0" layoutY="275.0" radius="45.0" stroke="BLACK" strokeType="INSIDE" />
-</children>
+<Pane prefHeight="521.0" prefWidth="746.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1"
+      fx:controller="dk.dtu.controller.AppController">
+    <children>
+        <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="200.0" stroke="BLACK" strokeType="INSIDE"
+                   width="302.0"/>
+        <ImageView fx:id="background" fitHeight="521.0" fitWidth="746.0">
+            <image>
+                <Image url="@Images/moonlit_main_day.jpg"/>
+            </image>
+        </ImageView>
+        <VBox layoutY="310.0" prefHeight="211.0" prefWidth="255.0">
+            <children>
+                <TextField fx:id="messageField" promptText="Enter message here"/>
+                <Button onAction="#handleSendAction" prefHeight="25.0" prefWidth="296.0" text="Send"/>
+                <TextArea fx:id="messageArea" editable="false"/>
+            </children>
+        </VBox>
+        <VBox layoutX="588.0" layoutY="95.0" prefHeight="211.0" prefWidth="144.0">
+            <children>
+                <Label style="-fx-background-color: #FFFFFF;" text="Usernames:"/>
+                <TextArea fx:id="usernameList" editable="false" prefHeight="213.0" prefWidth="144.0"/>
+            </children>
+        </VBox>
+        <VBox layoutX="14.0" layoutY="142.0" prefHeight="153.0" prefWidth="144.0">
+            <children>
+                <TextField editable="false" text="Your Role:"/>
+                <TextArea fx:id="roleBox" prefHeight="200.0" prefWidth="200.0" wrapText="true"/>
+            </children>
+        </VBox>
+        <VBox layoutX="547.0" layoutY="403.0" prefHeight="118.0" prefWidth="199.0">
+            <children>
+                <TextField/>
+                <TextArea prefHeight="200.0" prefWidth="200.0"/>
+            </children>
+        </VBox>
+        <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#06223b" height="45.0" layoutX="603.0" stroke="BLACK"
+                   strokeType="INSIDE" width="144.0"/>
+        <Text fill="#7f0000" layoutX="630.0" layoutY="29.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Settings"
+              textAlignment="CENTER" wrappingWidth="90.552001953125">
+            <font>
+                <Font name="Gill Sans Ultra Bold Condensed" size="20.0"/>
+            </font>
+        </Text>
+        <ImageView fx:id="counter" fitHeight="225.0" fitWidth="290.0" layoutX="-60.0" layoutY="-48.0">
+            <image>
+                <Image url="@Images/sun.png"/>
+            </image>
+        </ImageView>
+        <Label fx:id="timerLabel" layoutX="60.0" layoutY="52.0" text="02:00">
+            <font>
+                <Font name="Gill Sans Ultra Bold Condensed" size="20.0"/>
+            </font>
+        </Label>
+        <Circle fx:id="User11" disable="true" visible="false" fill="DODGERBLUE" layoutX="424.0" layoutY="277.0"
+                onMouseClicked="#AttemptAction" radius="39.0" stroke="BLACK" strokeType="INSIDE"/>
+        <Label fx:id="labelForUser11" mouseTransparent="true" layoutX="404" layoutY="257"/>
+        <Circle fx:id="User10" disable="true" visible="false" fill="DODGERBLUE" layoutX="302.0" layoutY="295.0"
+                onMouseClicked="#AttemptAction" radius="39.0" stroke="BLACK" strokeType="INSIDE"/>
+        <Label fx:id="labelForUser10" mouseTransparent="true" layoutX="282" layoutY="275"/>
+        <Circle fx:id="User9" disable="true" visible="false" fill="DODGERBLUE" layoutX="516.0" layoutY="219.0"
+                onMouseClicked="#AttemptAction" radius="39.0" stroke="BLACK" strokeType="INSIDE"/>
+        <Label fx:id="labelForUser9"  mouseTransparent="true" layoutX="496" layoutY="199"/>
+        <Circle fx:id="User8" disable="true" visible="false" fill="DODGERBLUE" layoutX="341.0" layoutY="222.0"
+                onMouseClicked="#AttemptAction" radius="39.0" stroke="BLACK" strokeType="INSIDE"/>
+        <Label fx:id="labelForUser8" mouseTransparent="true" layoutX="321" layoutY="202"/>
+        <Circle fx:id="User7" disable="true" visible="false" fill="DODGERBLUE" layoutX="242.0" layoutY="216.0"
+                onMouseClicked="#AttemptAction" radius="39.0" stroke="BLACK" strokeType="INSIDE"/>
+        <Label fx:id="labelForUser7" mouseTransparent="true" layoutX="222" layoutY="196"/>
+        <Circle fx:id="User6" disable="true" visible="false" fill="DODGERBLUE" layoutX="463.0" layoutY="153.0"
+                onMouseClicked="#AttemptAction" radius="39.0" stroke="BLACK" strokeType="INSIDE"/>
+        <Label fx:id="labelForUser6" mouseTransparent="true" layoutX="443" layoutY="133"/>
+        <Circle fx:id="User5" disable="true" visible="false" fill="DODGERBLUE" layoutX="346.0" layoutY="134.0"
+                onMouseClicked="#AttemptAction" radius="39.0" stroke="BLACK" strokeType="INSIDE"/>
+        <Label fx:id="labelForUser5" mouseTransparent="true" layoutX="326" layoutY="114"/>
+        <Circle fx:id="User4" disable="true" visible="false" fill="DODGERBLUE" layoutX="242.0" layoutY="124.0"
+                onMouseClicked="#AttemptAction" radius="39.0" stroke="BLACK" strokeType="INSIDE"/>
+        <Label fx:id="labelForUser4" mouseTransparent="true" layoutX="222" layoutY="104"/>
+        <Circle fx:id="User0" disable="true" visible="false" fill="DODGERBLUE" layoutX="219.0" layoutY="34.0"
+                onMouseClicked="#AttemptAction" radius="29.0" stroke="BLACK" strokeType="INSIDE"/>
+        <Label fx:id="labelForUser0" mouseTransparent="true" layoutX="199" layoutY="14"/>
+        <Circle fx:id="User3" disable="true" visible="false" fill="DODGERBLUE" layoutX="516.0" layoutY="65.0"
+                onMouseClicked="#AttemptAction" radius="39.0" stroke="BLACK" strokeType="INSIDE"/>
+        <Label fx:id="labelForUser3" mouseTransparent="true" layoutX="496" layoutY="45"/>
+        <Circle fx:id="User2" disable="true" visible="false" fill="DODGERBLUE" layoutX="424.0" layoutY="52.0"
+                onMouseClicked="#AttemptAction" radius="39.0" stroke="BLACK" strokeType="INSIDE"/>
+        <Label fx:id="labelForUser2" mouseTransparent="true" layoutX="404" layoutY="32"/>
+        <Circle fx:id="User1" disable="true" visible="false" fill="DODGERBLUE" layoutX="307.0" layoutY="45.0"
+                onMouseClicked="#AttemptAction" radius="39.0" stroke="BLACK" strokeType="INSIDE"/>
+        <Label fx:id="labelForUser1" mouseTransparent="true" layoutX="287" layoutY="25"/>
+    </children>
 </Pane>
