--- a/src/main/resources/dk/dtu/view/App_view.fxml
+++ b/src/main/resources/dk/dtu/view/App_view.fxml
@@ -23,7 +23,8 @@
         <Button fx:id="sendButton" onAction="#handleSendAction" prefHeight="25.0" prefWidth="296.0" text="Send" />
         <TextArea fx:id="messageArea" editable="false" />
     </VBox>
-    <VBox layoutX="588.0" layoutY="95.0" prefHeight="211.0" prefWidth="144.0">
+    <VBox layoutX="588.0" layoutY="67.0" prefHeight="211.0" prefWidth="144.0">
+        <TextField fx:id="infoTextField" editable="false" />
         <TextArea fx:id="killedList" editable="false" prefHeight="213.0" prefWidth="144.0" />
     </VBox>
     <VBox layoutX="14.0" layoutY="142.0" prefHeight="153.0" prefWidth="144.0">
@@ -31,7 +32,6 @@
         <TextArea fx:id="roleBox" prefHeight="200.0" prefWidth="200.0" wrapText="true" />
     </VBox>
     <VBox layoutX="547.0" layoutY="403.0" prefHeight="118.0" prefWidth="199.0" />
-    <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#06223b" height="45.0" layoutX="603.0" stroke="BLACK" strokeType="INSIDE" width="144.0" />
     <ImageView fx:id="counter" fitHeight="221.0" fitWidth="288.0" layoutX="-60.0" layoutY="-48.0">
         <Image url="@Images/sun.png" />
     </ImageView>
@@ -43,39 +43,39 @@
 
     <!-- Example for labelForSnitch0 -->
 
-    <Label fx:id="labelForSnitch0" layoutX="194.0" layoutY="66.0" mouseTransparent="true" style="-fx-background-color: #4D2613;" textFill="white" />
+    <Label fx:id="labelForSnitch0" layoutX="190.0" layoutY="59.0" visible = "false" alignment="Center" mouseTransparent="true" prefHeight="17.0" prefWidth="59.0" style="-fx-background-color: #4D2613;" textFill="white" />
     <!-- Example for labelForSnitch1 -->
 
-    <Label fx:id="labelForSnitch1" layoutX="282.0" layoutY="66.0" mouseTransparent="true" style="-fx-background-color: #4D2613;" textFill="white" />
+    <Label fx:id="labelForSnitch1" layoutX="278.0" layoutY="65.0" visible = "false" alignment="Center" mouseTransparent="true" prefHeight="17.0" prefWidth="70.0" style="-fx-background-color: #4D2613;" textFill="white" />
     <!-- Example for labelForSnitch2 -->
 
-    <Label fx:id="labelForSnitch2" layoutX="385.0" layoutY="86.0" mouseTransparent="true" style="-fx-background-color: #4D2613;" textFill="white" />
+    <Label fx:id="labelForSnitch2" layoutX="381.0" layoutY="77.0" visible = "false" alignment="Center" mouseTransparent="true" prefHeight="17.0" prefWidth="70.0" style="-fx-background-color: #4D2613;" textFill="white" />
     <!-- Example for labelForSnitch3 -->
 
-    <Label fx:id="labelForSnitch3" layoutX="502.0" layoutY="96.0" mouseTransparent="true" style="-fx-background-color: #4D2613;" textFill="white" />
+    <Label fx:id="labelForSnitch3" layoutX="487.0" layoutY="95.0" visible = "false" alignment="Center" mouseTransparent="true" prefHeight="17.0" prefWidth="70.0" style="-fx-background-color: #4D2613;" textFill="white" />
     <!-- Example for labelForSnitch4 -->
 
-    <Label fx:id="labelForSnitch4" layoutX="223.0" layoutY="155.0" mouseTransparent="true" style="-fx-background-color: #4D2613;" textFill="white" />
+    <Label fx:id="labelForSnitch4" layoutX="212.0" layoutY="155.0" visible = "false" alignment="Center" mouseTransparent="true" prefHeight="17.0" prefWidth="70.0" style="-fx-background-color: #4D2613;" textFill="white" />
     <!-- Example for labelForSnitch5 -->
 
-    <Label fx:id="labelForSnitch5" layoutX="332.0" layoutY="155.0" mouseTransparent="true" style="-fx-background-color: #4D2613;" textFill="white" />
+    <Label fx:id="labelForSnitch5" layoutX="316.0" layoutY="157.0" visible = "false" alignment="Center" mouseTransparent="true" prefHeight="17.0" prefWidth="70.0" style="-fx-background-color: #4D2613;" textFill="white" />
     <!-- Example for labelForSnitch6 -->
 
-    <Label fx:id="labelForSnitch6" layoutX="424.0" layoutY="184.0" mouseTransparent="true" style="-fx-background-color: #4D2613;" textFill="white" />
+    <Label fx:id="labelForSnitch6" layoutX="432.0" layoutY="177.0" visible = "false" alignment="Center" mouseTransparent="true" prefHeight="17.0" prefWidth="70.0" style="-fx-background-color: #4D2613;" textFill="white" />
     <!-- Example for labelForSnitch7 -->
 
-    <Label fx:id="labelForSnitch7" layoutX="217.0" layoutY="247.0" mouseTransparent="true" style="-fx-background-color: #4D2613;" textFill="white" />
+    <Label fx:id="labelForSnitch7" layoutX="210.0" layoutY="243.0" visible = "false" alignment="Center" mouseTransparent="true" prefHeight="17.0" prefWidth="70.0" style="-fx-background-color: #4D2613;" textFill="white" />
     <!-- Example for labelForSnitch8 -->
 
-    <Label fx:id="labelForSnitch8" layoutX="332.0" layoutY="252.0" mouseTransparent="true" style="-fx-background-color: #4D2613;" textFill="white" />
+    <Label fx:id="labelForSnitch8" layoutX="307.0" layoutY="246.0" visible = "false" alignment="Center" mouseTransparent="true" prefHeight="17.0" prefWidth="70.0" style="-fx-background-color: #4D2613;" textFill="white" />
     <!-- Example for labelForSnitch9 -->
 
-    <Label fx:id="labelForSnitch9" layoutX="491.0" layoutY="261.0" mouseTransparent="true" style="-fx-background-color: #4D2613;" textFill="white" />
+    <Label fx:id="labelForSnitch9" layoutX="482.0" layoutY="252.0" visible = "false" alignment="Center" mouseTransparent="true" prefHeight="17.0" prefWidth="70.0" style="-fx-background-color: #4D2613;" textFill="white" />
     <!-- Example for labelForSnitch10 -->
 
-    <Label fx:id="labelForSnitch10" layoutX="277.0" layoutY="326.0" mouseTransparent="true" style="-fx-background-color: #4D2613;" textFill="white" />
+    <Label fx:id="labelForSnitch10" layoutX="265.0" layoutY="327.0" visible = "false" alignment="Center" mouseTransparent="true" prefHeight="17.0" prefWidth="70.0" style="-fx-background-color: #4D2613;" textFill="white" />
     <!-- Example for labelForSnitch11 -->
-    <Label fx:id="labelForSnitch11" layoutX="399.0" layoutY="308.0" mouseTransparent="true" style="-fx-background-color: #4D2613;" textFill="white" />
+    <Label fx:id="labelForSnitch11" layoutX="389.0" layoutY="308.0" visible = "false" alignment="Center" mouseTransparent="true" prefHeight="17.0" prefWidth="70.0" style="-fx-background-color: #4D2613;" textFill="white" />
 
     <AnchorPane fx:id="User6" disable="true" layoutX="430.0" layoutY="115.0" onMouseClicked="#AttemptAction" prefHeight="69.0" prefWidth="71.0" visible="false">
         <ImageView fitHeight="69.0" fitWidth="72.0">
@@ -187,6 +187,5 @@
         </ImageView>
         <Label fx:id="labelForUser4" alignment="CENTER" layoutY="46.0" mouseTransparent="true" prefHeight="17.0" prefWidth="70.0" style="-fx-background-color: white;" />
     </AnchorPane>
-     <TextField fx:id="infoTextField" editable="false" layoutX="581.0" layoutY="73.0" />
 
 </Pane>
